The following changes were made: Fixed pre element's overflow-x to auto to avoid weird overlapping. Scrollbar's width of page changed.

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -9,6 +9,9 @@
 
 /* GENERAL
 ---------------------------------------------*/
+::-webkit-scrollbar {
+  width: 15px;
+}
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 
 /* NAVBAR 
@@ -67,6 +70,10 @@ ol {
 
 li {
   padding: 0 0 20px 10px;
+}
+
+pre {
+  overflow-x: auto;
 }
 
 pre,
